# rust-fallible-iterator

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
doc/v0.1.0/: search-index.js
doc/v0.1.0/fallible_iterator/: fn.convert.html  index.html  sidebar-items.js  struct.Chain.html  struct.Cloned.html  struct.Convert.html  struct.Enumerate.html  struct.Fuse.html  struct.Map.html  struct.Peekable.html  struct.Rev.html  struct.Take.html  trait.DoubleEndedFallibleIterator.html  trait.FallibleIterator.html  trait.FromFallibleIterator.html  trait.IntoFallibleIterator.html
doc/v0.1.1/: search-index.js
doc/v0.1.1/fallible_iterator/: fn.convert.html  index.html  sidebar-items.js  struct.Chain.html  struct.Cloned.html  struct.Convert.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.Fuse.html  struct.Iterator.html  struct.Map.html  struct.MapErr.html  struct.Peekable.html  struct.Rev.html  struct.Take.html  struct.Zip.html  trait.DoubleEndedFallibleIterator.html  trait.FallibleIterator.html  trait.FromFallibleIterator.html  trait.IntoFallibleIterator.html
doc/v0.1.2/: search-index.js
doc/v0.1.2/fallible_iterator/: fn.convert.html  index.html  sidebar-items.js  struct.Chain.html  struct.Cloned.html  struct.Convert.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.Fuse.html  struct.Iterator.html  struct.Map.html  struct.MapErr.html  struct.Peekable.html  struct.Rev.html  struct.Take.html  struct.Zip.html  trait.FallibleIterator.html  (+3 more)
doc/v0.1.3/: search-index.js
src/: lib.rs  test.rs
(+35 files in other folders)
